<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/exam" />

    <TextView
        android:id="@+id/instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:textAlignment="center"
        android:text="@string/instruction"
        android:textSize="20sp"
        android:textColor="@color/colorBlack" />


    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userNameFieldHint"
        android:inputType="textPersonName"
        android:drawableLeft="@drawable/ic_action_actor"
        android:textSize="26sp"
        android:digits="@string/values"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/instruction"/>

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        card_view:cardBackgroundColor="@color/colorAccent"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="10dp"
        android:onClick="start"
        android:layout_marginBottom="35dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textStyle="bold"
                android:text="@string/start"
                android:textColor="#ffffff" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>